@@ -15,9 +15,11 @@ import de.berlios.sventon.SventonException;
 import de.berlios.sventon.appl.InstanceConfiguration;
 import de.berlios.sventon.colorer.Colorer;
 import de.berlios.sventon.diff.DiffException;
-import de.berlios.sventon.model.*;
+import de.berlios.sventon.model.AnnotatedTextFile;
+import de.berlios.sventon.model.InlineDiffRow;
+import de.berlios.sventon.model.SideBySideDiffRow;
+import de.berlios.sventon.model.TextFile;
 import de.berlios.sventon.repository.RepositoryEntry;
-import de.berlios.sventon.repository.cache.objectcache.ObjectCache;
 import de.berlios.sventon.repository.export.ExportDirectory;
 import de.berlios.sventon.web.command.DiffCommand;
 import org.tmatesoft.svn.core.SVNException;
@@ -233,24 +235,6 @@ public interface RepositoryService {
    * @throws SVNException if a subversion error occur
    */
   List<SVNFileRevision> getFileRevisions(final SVNRepository repository, final String path, final long revision) throws SVNException;
-
-  /**
-   * Gets a thumbnail image from given full size image url.
-   *
-   * @param repository       The repository
-   * @param objectCache      Cache instance
-   * @param path             The entry path
-   * @param revision         The entry revision
-   * @param fullSizeImageUrl Image URL
-   * @param imageFormatName  Format name
-   * @param maxThumbnailSize Size
-   * @param out              Destination output stream
-   * @return null
-   * @throws SVNException if a subversion error occur
-   */
-  ImageMetadata getThumbnailImage(final SVNRepository repository, final ObjectCache objectCache, final String path,
-                                  final long revision, final URL fullSizeImageUrl, final String imageFormatName,
-                                  final int maxThumbnailSize, final OutputStream out) throws SVNException;
 
   /**
    * Creates a side-by-side diff.
